cambio de style css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div>
         <section class="avatar">
-            <img src="https://unavatar.io/kikobeats" alt="">
-            <img src="https://unavatar.io/kikobeats" alt="">
-            <img src="https://unavatar.io/kikobeats" alt="">
+            <img src="https://unavatar.io/twitter/alba_gd" alt="">
+            <img src="https://unavatar.io/soundcloud/gorillaz" alt="">
+            <img src="https://unavatar.io/youtube/caseyneistat" alt="">
         </section>
     </div>
 </body>
